NOF 9 styling  -  fix sub-menu expand/collapse icon

--- a/Spa2/nakedobjectsspa/src/app/actions/actions.component.css
+++ b/Spa2/nakedobjectsspa/src/app/actions/actions.component.css
@@ -51,3 +51,21 @@
 .submenu .icon-expand, .submenu .icon-collapse {
         font-size: 8pt;
 }
+
+[class^="icon-"], [class*=" icon-"] {
+    font-family: "iconFont";
+    font-weight: normal;
+    font-style: normal;
+    text-decoration: inherit;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    width: auto;
+    height: auto;
+    line-height: normal;
+    vertical-align: baseline;
+    background-image: none;
+    background-position: 0% 0%;
+    background-repeat: repeat;
+    margin-top: 0;
+    position: relative;
+}
